...
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical">
                    <app.futured.donut.DonutProgressView
                        android:id="@+id/donut_view"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        app:donut_bgLineColor="@color/MorelightGray"
                        app:donut_gapWidth="20"
                        app:donut_gapAngle="270"
                        app:donut_strokeWidth="16dp"/>
                    <TextView
                        android:id="@+id/Donut_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/base_text_size"
                        android:layout_marginBottom="7dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/long_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/base_text_size"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:textColor="@color/white"
                        android:fontFamily="@font/pro_regular"
                        android:text="@string/long_positions"/>
                    <TextView
                        android:id="@+id/short_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/base_text_size"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:textColor="@color/white"
                        android:fontFamily="@font/pro_regular"
...

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/materialsCard"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:cardCornerRadius="@dimen/card_radius">
...
                    android:text="@string/base_strategies_useful_tips"
                    android:textColor="@color/white"
                    android:textSize="@dimen/base_text_size"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/date_card"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:cardCornerRadius="@dimen/card_radius"
...
