<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/help"
        android:title="help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/Language"
        android:title="Ru"
        android:icon="@drawable/ic_en1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/Theme"
        android:title="Theme"
        android:icon="@drawable/white_sun"
        app:showAsAction="ifRoom"
        />
</menu>