...
    <string name="results">Results</string>
    <string name="analysis">Analysis</string>
    <string name="useful_materials">Useful materials</string>
    <string name="base_strategies_useful_tips">Base, strategies, useful tips</string>
    <string name="win_positions">Win positions:</string>
    <string name="defeat_positions">Defeat positions:</string>
    <string name="time_statistics">Time statistics</string>
    <string name="statistics_on_indicators">Statistics on indicators</string>
    <string name="general_statistics">General statistics</string>
    <string name="including_strategies">Including strategies</string>
    <string name="add_trade">Add trade</string>
    <string name="enter_the_indicator">Enter the indicator:</string>
    <string name="enter_the_strategy">Enter the strategy:</string>
...
