...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usefullMaterials.MaterialsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/materials_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            style="@style/Text"
...
